test/minioingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8s-ingress
  namespace: minio
  annotations:
   # nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: kubeminio.unitsky.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minio
                port:
                  - name: minio-api         
                    port: 9000
                  - name: minio-console
                    port: 9001
