test/portainer.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: portainer-ingress
  namespace: portainer
  annotations:
      nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
      nginx.ingress.kubernetes.io/ssl-redirect: "true"
      nginx.ingress.kubernetes.io/secure-backends: "true"
 #   kubernetes.io/ingress.class: "nginx"
 #    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: portainer-k8s.unitsky.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: portainer-agent
                port:
                  number: 9001
  tls:
    - hosts:
        - portainer-k8s.unitsky.com
      secretName: unitsky-secret
