test/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-for-deployment
  namespace: homework
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 8090
      targetPort: 8000
  type: ClusterIP
